ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-micro-ingress
spec:
  rules:
  - http:
      paths:
      - path: /auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 80

      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 80
